# inspekt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  kustomization.yaml
deploy/: deployment.yaml  ingress-example.yaml  k8s-deployment.yaml  k8s-service.yaml
src/: main.rs
templates/: index.hbs
