[package]
name = "inspekt"
version = "0.1.0"
authors = ["Minku Lee <public@premi.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_prometheus = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates"]
